adicionado formulario para aviso de pizza pronta, mudanca no template base.html e criacao de novas views

--- a/pizzaria/pizzaria/entrega/templates/entrega/cliente_detail.html
+++ b/pizzaria/pizzaria/entrega/templates/entrega/cliente_detail.html
@@ -16,6 +16,13 @@
     <td>{{ cliente.endereco }}</td>
 </tr>
 
+<form action="{% url cliente-obs %}" method="POST">
+{% csrf_token %}
+<input tyep="hidden" name="cliente_id" value="{{cli.id}}>
+
+{{ formulario_obs.as_p }}
+<input type="submit" name="atualizar" value="Atualizar observação>
+
 
 </table>
 </body>
